[gd_scene load_steps=4 format=2]

[ext_resource path="res://fonts/font_vera_hint.tres" type="DynamicFont" id=1]
[ext_resource path="res://ui/Canvas.gd" type="Script" id=2]
[ext_resource path="res://theme/main_theme.tres" type="Theme" id=3]

[node name="canvas" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -2.09302
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 3 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = -1

[node name="canvas_root" type="Control" parent="CanvasLayer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -1.54651
margin_top = -0.5
margin_right = -0.546509
margin_bottom = 0.5
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSeparator" type="HSeparator" parent="CanvasLayer/canvas_root"]
margin_left = -256.0
margin_top = -7.0
margin_right = 256.0
margin_bottom = 7.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSeparator2" type="HSeparator" parent="CanvasLayer/canvas_root"]
margin_left = -256.0
margin_top = -7.0
margin_right = 256.0
margin_bottom = 7.0
rect_rotation = 90.0
rect_pivot_offset = Vector2( 256, 7.5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="canvasScaler" type="Control" parent="CanvasLayer/canvas_root"]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GridContainer" type="GridContainer" parent="CanvasLayer/canvas_root/canvasScaler"]
margin_left = -768.0
margin_top = -768.0
margin_right = 768.0
margin_bottom = 768.0
rect_pivot_offset = Vector2( 768, 768 )
custom_constants/vseparation = 0
custom_constants/hseparation = 0
columns = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainTexture2" type="TextureRect" parent="CanvasLayer/canvas_root/canvasScaler/GridContainer"]
margin_right = 512.0
margin_bottom = 512.0
rect_pivot_offset = Vector2( 256, 256 )
size_flags_horizontal = 3
size_flags_vertical = 3
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainTexture3" type="TextureRect" parent="CanvasLayer/canvas_root/canvasScaler/GridContainer"]
margin_left = 512.0
margin_right = 1024.0
margin_bottom = 512.0
rect_pivot_offset = Vector2( 256, 256 )
size_flags_horizontal = 3
size_flags_vertical = 3
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainTexture4" type="TextureRect" parent="CanvasLayer/canvas_root/canvasScaler/GridContainer"]
margin_left = 1024.0
margin_right = 1536.0
margin_bottom = 512.0
rect_pivot_offset = Vector2( 256, 256 )
size_flags_horizontal = 3
size_flags_vertical = 3
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainTexture5" type="TextureRect" parent="CanvasLayer/canvas_root/canvasScaler/GridContainer"]
margin_top = 512.0
margin_right = 512.0
margin_bottom = 1024.0
rect_pivot_offset = Vector2( 256, 256 )
size_flags_horizontal = 3
size_flags_vertical = 3
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainTexture" type="TextureRect" parent="CanvasLayer/canvas_root/canvasScaler/GridContainer"]
margin_left = 512.0
margin_top = 512.0
margin_right = 1024.0
margin_bottom = 1024.0
rect_pivot_offset = Vector2( 256, 256 )
size_flags_horizontal = 3
size_flags_vertical = 3
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainTexture6" type="TextureRect" parent="CanvasLayer/canvas_root/canvasScaler/GridContainer"]
margin_left = 1024.0
margin_top = 512.0
margin_right = 1536.0
margin_bottom = 1024.0
rect_pivot_offset = Vector2( 256, 256 )
size_flags_horizontal = 3
size_flags_vertical = 3
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainTexture7" type="TextureRect" parent="CanvasLayer/canvas_root/canvasScaler/GridContainer"]
margin_top = 1024.0
margin_right = 512.0
margin_bottom = 1536.0
rect_pivot_offset = Vector2( 256, 256 )
size_flags_horizontal = 3
size_flags_vertical = 3
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainTexture8" type="TextureRect" parent="CanvasLayer/canvas_root/canvasScaler/GridContainer"]
margin_left = 512.0
margin_top = 1024.0
margin_right = 1024.0
margin_bottom = 1536.0
rect_pivot_offset = Vector2( 256, 256 )
size_flags_horizontal = 3
size_flags_vertical = 3
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainTexture9" type="TextureRect" parent="CanvasLayer/canvas_root/canvasScaler/GridContainer"]
margin_left = 1024.0
margin_top = 1024.0
margin_right = 1536.0
margin_bottom = 1536.0
rect_pivot_offset = Vector2( 256, 256 )
size_flags_horizontal = 3
size_flags_vertical = 3
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BottomBar" type="Control" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 0, 20 )
size_flags_horizontal = 3
size_flags_vertical = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="BottomBar"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = -45.0
margin_right = -10.0
margin_bottom = -24.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BottomInfo" type="Label" parent="BottomBar/HBoxContainer"]
margin_top = 3.0
margin_right = 26.0
margin_bottom = 17.0
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Ram"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="BottomBar/HBoxContainer"]
margin_left = 513.0
margin_right = 773.0
margin_bottom = 21.0
size_flags_horizontal = 6
custom_constants/separation = 10

[node name="ScaleLabel" type="Label" parent="BottomBar/HBoxContainer/HBoxContainer"]
margin_top = 2.0
margin_right = 83.0
margin_bottom = 19.0
text = "Scale 100%"

[node name="ResetView" type="Button" parent="BottomBar/HBoxContainer/HBoxContainer"]
margin_left = 93.0
margin_right = 192.0
margin_bottom = 21.0
focus_mode = 0
enabled_focus_mode = 0
text = "RESET VIEW"

[node name="Tile" type="Button" parent="BottomBar/HBoxContainer/HBoxContainer"]
margin_left = 202.0
margin_right = 260.0
margin_bottom = 21.0
focus_mode = 0
toggle_mode = true
pressed = true
enabled_focus_mode = 0
text = "TILING"

[node name="Timer" type="Timer" parent="."]
autostart = true

[connection signal="pressed" from="BottomBar/HBoxContainer/HBoxContainer/ResetView" to="." method="_on_ResetView_pressed"]
[connection signal="toggled" from="BottomBar/HBoxContainer/HBoxContainer/Tile" to="." method="_on_Tile_toggled"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
